# Agora-Auth

./: .dockerignore  Cargo.toml  Dockerfile
src/adapters/: mod.rs
src/adapters/clients/: mod.rs
src/adapters/clients/google/: google_code_exchanger.rs  mod.rs
src/adapters/clients/google/tests/: google_code_exchanger_tests.rs  mod.rs
src/adapters/clients/user_service/: mod.rs  user_service_http_client.rs
src/adapters/crypto/error/: crypto_error.rs  jwt_error.rs  mod.rs
src/adapters/crypto/error/tests/: conversion_tests.rs
src/adapters/crypto/token/: google_rs256_validator.rs  google_validator_config.rs  hmac_token_service.rs  jwks_provider.rs  mod.rs
src/adapters/crypto/token/tests/: google_rsa256_validator_tests.rs  google_validator_configuration_tests.rs  hmac_token_tests.rs  jwks_provider_tests.rs  mod.rs
src/adapters/http/: mod.rs  state.rs
src/adapters/http/dto/internal/: create_credential.rs  mod.rs
src/adapters/http/dto/public/: google_oauth.rs  mod.rs
src/adapters/http/error/: error_response.rs  http_error.rs  mod.rs
src/adapters/http/handlers/: mod.rs
src/adapters/http/handlers/internal/: credentials.rs  mod.rs
src/adapters/http/handlers/public/: auth.rs  google_oauth.rs  logout.rs  mod.rs  token_validation.rs  (+1 more)
src/adapters/http/middleware/: auth.rs  mod.rs  service_auth.rs
src/adapters/http/router/: internal_router.rs  mod.rs  public_router.rs  router.rs
src/adapters/http/tests/: state_tests.rs
src/adapters/persistence/: database.rs  mod.rs
src/adapters/persistence/error/: mod.rs
src/adapters/persistence/models/: external_identity_row.rs  identity_row.rs  mod.rs  session_row.rs
src/adapters/persistence/repositories/: credential_repository_sql.rs  external_identity_repository_sql.rs  identity_repository_sql.rs  mod.rs  session_repository_sql.rs
src/adapters/persistence/tests/: mod.rs  session_repository_tests.rs
src/bootstrap/: config.rs  mod.rs  wiring.rs
src/bootstrap/tests/: config_test.rs  server_test.rs  wiring_test.rs
src/core/: mod.rs
src/core/credentials/: stored_credential.rs
src/core/error/: authentication_error.rs  invariant_error.rs  mod.rs
src/core/error/tests/: authentication_error_tests.rs
src/core/identity/: contextual_identity.rs  external_identity.rs  identity_claims.rs  mod.rs  workspace_identity.rs
src/core/identity/tests/: contextual_identity_tests.rs  external_identity_tests.rs  identity_claims_tests.rs  mod.rs  workspace_identity_tests.rs
src/core/token/: token_claims.rs
src/core/token/tests/: token_claims_tests.rs
src/core/usecases/: authenticate_user.rs  exchange_google_code.rs  issue_session.rs  issue_session_for_external_identity.rs  issue_session_for_identity.rs  mod.rs  refresh_session.rs  revoke_session.rs  validate_access_token.rs
src/core/usecases/ports/: credential_repository.rs  exchange_authorization_code.rs  external_identity_repository.rs  external_token_validator.rs  identity_repository.rs  mod.rs  service_registry.rs  session_repository.rs  token_service.rs  user_service_client.rs
src/core/usecases/tests/: authenticate_user_tests.rs  issue_session_for_identity_tests.rs  issue_session_tests.rs  mod.rs  refresh_token_tests.rs  revoke_session_tests.rs  validate_access_token_tests.rs
(+23 files in other folders)
