[package]
name = "auth"
version = "0.1.0"
edition = "2024"
[dependencies]
# // Serialization & JSON
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# // OAuth2 & External Providers
oauth2 = { version = "5.0.0", features = ["reqwest"] }
openidconnect = "4.0.1"
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde_urlencoded = "0.7"
# // Time & Identifiers
chrono = "0.4"
uuid = { version = "1.22.0", features = ["v4", "v7", "serde"] }
# // Database
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"]}
# // Cryptography & Tokens
sha2 = "0.11.0"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
ring = "0.17.14"
rand = "0.10.0"
ed25519-dalek = "2.2.0"
base64 = "0.22.1"
hex = "0.4.3"
pkcs1 = { version = "0.7", features = ["alloc"] }
pkcs8 = { version = "0.10.2", features = ["encryption", "pem"] }
rsa = "0.9.10"
#// Web Framework & Runtime
tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
futures = "0.3.32"
# // Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# // Utilities & Config
anyhow = "1.0.102"
dotenvy = "0.15"
dashmap = "6.1.0"
[dev-dependencies]
mockall = "0.14.0"
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6.5"
